Cropped bio image some more; fixed font discrepancy, changed text alignment for bio side;

--- a/Optivet/Content/Site.css
+++ b/Optivet/Content/Site.css
@@ -159,8 +159,8 @@ h2.normalHeading {
 }
 
 p.bodyTextSmall {
-        font-family: "Myriad Pro";
-        text-align:justify;
+
+        text-align:center;
 }
 
  hr.bodyText  {
